Working version of schema explorer for BigQuery
